# headsupforfun

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
crates/gto-cli/: Cargo.toml
crates/gto-cli/src/: app.rs  main.rs
crates/gto-core/: Cargo.toml
crates/gto-core/benches/: hand_eval_smoke.rs
crates/gto-core/src/: cards.rs  deck.rs  hand_eval.rs  holdem.rs  lib.rs  matchplay.rs  range.rs  rng.rs
crates/gto-solver/: Cargo.toml
crates/gto-solver/benches/: blueprint_smoke.rs
crates/gto-solver/src/: abstraction.rs  blueprint.rs  bot.rs  cfr.rs  eval.rs  flop.rs  kuhn.rs  lib.rs  river.rs  training.rs  tree.rs  turn.rs
crates/gto-web/: Cargo.toml
crates/gto-web/src/: lib.rs
fixtures/eval/spots/: texassolver_smoke.json
fixtures/eval/texassolver/: smoke_reference.json
fixtures/strategies/: full_hand_smoke.json  river_demo.json  turn_demo.json
fixtures/transcripts/: blueprint_seed_7_one_hand.txt  hybrid_fast_seed_7_one_hand.txt  stub_seed_7_one_hand.txt
web/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  vite.config.ts
web/public/audio/: README.md
web/src/: App.css  App.test.tsx  App.tsx  index.css
web/src/assets/cards/: README.md
web/src/components/: PokerCard.tsx  PokerChipMark.tsx
web/src/lib/: cardAssets.test.ts  cardAssets.ts  pokerClient.test.ts  pokerClient.ts  pokerTypes.ts  presentation.test.ts  presentation.ts  tableAudio.test.ts  tableAudio.ts  timing.ts
web/src/workers/: pokerWorker.ts  pokerWorkerRuntime.test.ts  pokerWorkerRuntime.ts
web/tests/: app.spec.ts
web/visual/: capture.spec.ts
xtask/: Cargo.toml
xtask/src/: main.rs
