[workspace]
members = [
    "crates/gto-core",
    "crates/gto-solver",
    "crates/gto-cli",
    "xtask",
]
default-members = [
    "crates/gto-core",
    "crates/gto-solver",
    "crates/gto-cli",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
proptest = "1.9.0"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
rand_chacha = { version = "0.9.0", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
