[package]
name = "gto-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "gto-cli"
path = "src/main.rs"

[features]
default = []
parallel = ["gto-solver/parallel"]

[dependencies]
gto-core = { path = "../gto-core", default-features = false, features = ["std"] }
gto-solver = { path = "../gto-solver", default-features = false, features = ["std"] }
