[package]
name = "gto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "hand_eval_smoke"
harness = false

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
