[package]
name = "gto-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["std", "serde"]
parallel = []
serde = ["dep:serde", "dep:serde_json", "gto-core/serde"]
std = ["gto-core/std"]

[dependencies]
gto-core = { path = "../gto-core", default-features = false }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
